data/derived/comb/progs/unify/prog8780.ml.out
Characters 77-88:
  | h::t -> matchHeads (explode w) (listReverse (explode w));;
                       ^^^^^^^^^^^
Error: This expression has type char list
       but an expression was expected of type 'a list list
       Type char is not compatible with type 'a list 
